k8s/live/live-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example-poc
  namespace: at-rafay765-dev
  labels:
    app: example-poc
    app.kubernetes.io/component: example-poc
    app.kubernetes.io/instance: example-poc
spec:
  clusterIP: 172.30.99.116
  ipFamilies:
    - IPv4
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  internalTrafficPolicy: Cluster
  clusterIPs:
    - 172.30.99.116
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: example-poc
status:
  loadBalancer: {}
